force-app/main/default/objects/cgcloud__Flatten_Account_Hierarchy__c/cgcloud__Flatten_Account_Hierarchy__c.object-meta.xml
<CustomObject>
    <description>This SObject holds node hierarchy information for the Customer Segmentation functionality.</description>
    <label>Flatten Account Hierarchy</label>
    <nameField>
        <displayFormat>FAH-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flatten Account Hierarchies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>