force-app/main/default/objects/cgcloud__Flatten_Account_Hierarchy__c/fields/cgcloud__Account__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account__c</fullName>
    <description>Reference to the Account of the hierarchy node.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Flatten Account Hierarchies</relationshipLabel>
    <relationshipName>Flatten_Account_Hierarchies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>