force-app/main/default/objects/cgcloud__Flatten_Account_Hierarchy__c/fields/cgcloud__Account_Level_01__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account_Level_01__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Account level hierarchy.</description>
    <label>Account Level 01</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Flatten Account Hierarchies (Account Level 01)</relationshipLabel>
    <relationshipName>Flatten_Account_Hierarchies1</relationshipName>
    <type>Lookup</type>
</CustomField>