force-app/main/default/objects/cgcloud__Flatten_Account_Hierarchy__c/fields/cgcloud__ExternalID__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__ExternalID__c</fullName>
    <description>Reference to the ID of the records.
No longer used, the UpsertID will be used instead of ExternalID.</description>
    <externalId>true</externalId>
    <label>ExternalID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>