force-app/main/default/objects/cgcloud__Flatten_Account_Hierarchy__c/fields/cgcloud__Node_Level__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Node_Level__c</fullName>
    <description>Reference to the level of the node in the hierarchy.</description>
    <label>Node Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>