force-app/main/default/objects/cgcloud__Flatten_Account_Hierarchy__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Account__c</columns>
    <columns>cgcloud__Account_Level_01__c</columns>
    <columns>cgcloud__Account_Level_02__c</columns>
    <columns>cgcloud__Account_Level_03__c</columns>
    <columns>cgcloud__Account_Level_04__c</columns>
    <columns>cgcloud__Account_Level_05__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>